# Virtual-Element-Method

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  file_structure.txt  l2proj.py  pyproject.toml  repo.txt  requirements.txt
assembly/: __init__.py
demo/: run_l2_projection.py  run_poisson.py  vem_kernel_spectrum_test.py
l2proj/demo/: __init__.py
l2proj/diagnostics/: __init__.py
l2proj/spaces/: __init__.py
l2proj/spaces/common/: __init__.py
spaces/: base.py
spaces/finite/: __init__.py
spaces/finite/hermite/: __init__.py
spaces/finite/lagrange/: __init__.py  linear_lagrange.py
spaces/virtual/hermite/: __init__.py
spaces/virtual/lagrange/: __init__.py
src/VEM/: __init__.py
src/VEM/assembly/: __init__.py  l2_projection.py  poisson.py
src/VEM/diagnostics/: __init__.py  compare_gradients.py  compare_projectors.py  eoc.py  error.py
src/VEM/spaces/: __init__.py  base.py
src/VEM/spaces/common/: __init__.py  cls_projector.py  hermite_mapping.py  reference_triangle.py  scaled_monomials.py  triangle_geometry.py  vertex_scaling.py
src/VEM/spaces/finite/: __init__.py
src/VEM/spaces/finite/hermite/: __init__.py  cubic_hermite.py  quartic_hermite.py
src/VEM/spaces/finite/lagrange/: __init__.py  linear_lagrange.py  quadratic_lagrange.py
src/VEM/spaces/virtual/: __init__.py
src/VEM/spaces/virtual/hermite/: __init__.py  cubic_hermite_mapped.py  cubic_hermite_physical.py  quartic_hermite_mapped.py  quartic_hermite_physical.py
src/VEM/spaces/virtual/lagrange/: __init__.py  linear_lagrange_mapped.py  linear_lagrange_physical.py  (+2 more)
