[project]
name = "VEM"
version = "0.1.0"
description = "Finite and virtual element implementations for triangular meshes"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh D" }]
dependencies = [
  "numpy",
  "scipy",
  "dune_common",
  "dune_geometry",
  "dune_grid",
  "dune_alugrid",
  "cmake",
]